docs_exported/1.21/crafttweaker/docs/vanilla/api/BracketDumpers.md
# BracketDumpers

## Importing the class

It might be required for you to import the package if you encounter any issues (like casting an Array), so better be safe than sorry and add the import at the very top of the file.
```zenscript
import crafttweaker.api.BracketDumpers;
```


## Static Methods

:::group{name=getAttributeDump}

Return Type: [Collection](/vanilla/api/util/collection/Collection)&lt;string&gt;

```zenscript
// BracketDumpers.getAttributeDump() as Collection<string>

BracketDumpers.getAttributeDump();
```

:::

:::group{name=getBannerPatterns}

Return Type: [Collection](/vanilla/api/util/collection/Collection)&lt;string&gt;

```zenscript
// BracketDumpers.getBannerPatterns() as Collection<string>

BracketDumpers.getBannerPatterns();
```

:::

:::group{name=getBlockDump}

Return Type: [Collection](/vanilla/api/util/collection/Collection)&lt;string&gt;

```zenscript
// BracketDumpers.getBlockDump() as Collection<string>

BracketDumpers.getBlockDump();
```

:::

:::group{name=getComponentTypes}

Return Type: [Collection](/vanilla/api/util/collection/Collection)&lt;string&gt;

```zenscript
// BracketDumpers.getComponentTypes() as Collection<string>

BracketDumpers.getComponentTypes();
```

:::

:::group{name=getEffectDump}

Return Type: [Collection](/vanilla/api/util/collection/Collection)&lt;string&gt;

```zenscript
// BracketDumpers.getEffectDump() as Collection<string>

BracketDumpers.getEffectDump();
```

:::

:::group{name=getEnchantmentDump}

Return Type: [Collection](/vanilla/api/util/collection/Collection)&lt;string&gt;

```zenscript
// BracketDumpers.getEnchantmentDump() as Collection<string>

BracketDumpers.getEnchantmentDump();
```

:::

:::group{name=getEntityTypeDump}

Return Type: [Collection](/vanilla/api/util/collection/Collection)&lt;string&gt;

```zenscript
// BracketDumpers.getEntityTypeDump() as Collection<string>

BracketDumpers.getEntityTypeDump();
```

:::

:::group{name=getFluidStackDump}

Return Type: [Collection](/vanilla/api/util/collection/Collection)&lt;string&gt;

```zenscript
// BracketDumpers.getFluidStackDump() as Collection<string>

BracketDumpers.getFluidStackDump();
```

:::

:::group{name=getInstruments}

Return Type: [Collection](/vanilla/api/util/collection/Collection)&lt;string&gt;

```zenscript
// BracketDumpers.getInstruments() as Collection<string>

BracketDumpers.getInstruments();
```

:::

:::group{name=getItemBracketDump}

Return Type: [Collection](/vanilla/api/util/collection/Collection)&lt;string&gt;

```zenscript
// BracketDumpers.getItemBracketDump() as Collection<string>

BracketDumpers.getItemBracketDump();
```

:::

:::group{name=getPotionTypeDump}

Return Type: [Collection](/vanilla/api/util/collection/Collection)&lt;string&gt;

```zenscript
// BracketDumpers.getPotionTypeDump() as Collection<string>

BracketDumpers.getPotionTypeDump();
```

:::

:::group{name=getProfessionDump}

Return Type: [Collection](/vanilla/api/util/collection/Collection)&lt;string&gt;

```zenscript
// BracketDumpers.getProfessionDump() as Collection<string>

BracketDumpers.getProfessionDump();
```

:::

:::group{name=getSoundEventDump}

Return Type: [Collection](/vanilla/api/util/collection/Collection)&lt;string&gt;

```zenscript
// BracketDumpers.getSoundEventDump() as Collection<string>

BracketDumpers.getSoundEventDump();
```

:::

:::group{name=getTargetingStrategyDump}

Return Type: [Collection](/vanilla/api/util/collection/Collection)&lt;string&gt;

```zenscript
// BracketDumpers.getTargetingStrategyDump() as Collection<string>

BracketDumpers.getTargetingStrategyDump();
```

:::

:::group{name=getTrimMaterials}

Return Type: [Collection](/vanilla/api/util/collection/Collection)&lt;string&gt;

```zenscript
// BracketDumpers.getTrimMaterials() as Collection<string>

BracketDumpers.getTrimMaterials();
```

:::

:::group{name=getTrimPatterns}

Return Type: [Collection](/vanilla/api/util/collection/Collection)&lt;string&gt;

```zenscript
// BracketDumpers.getTrimPatterns() as Collection<string>

BracketDumpers.getTrimPatterns();
```

:::

